# Project-AWCV

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md  build.sh  main.cc
data/: svm24_crop.xml  svm24_crop20221017.xml  svm24_crop20221024.xml
examples/: CoreTest.hpp
include/: awcv.hpp  core.hpp  dft.hpp  face.hpp  features.hpp  opticalFlow.hpp  region.hpp  sfm.hpp
include/moire/: moire.hpp
src/: awcv.hpp  core.cpp  core.hpp  dft.cpp  face.cpp  features.cpp  file.cpp  file.hpp  opticalFlow.cpp  region.cpp  region.hpp  sfm.cpp  sfm.hpp
src/moire/: moire.cpp  moire.hpp
